--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
           container.webkitRequestFullscreen();
         }
       }
+      var supportsOrientationChange = "onorientationchange" in window,
+        orientationEvent = supportsOrientationChange ? "orientationchange" : "resize";
+
+    window.addEventListener(orientationEvent, function() {
+        alert('HOLY ROTATING SCREENS BATMAN:' + window.orientation + " " + screen.width);
+    }, false);
     </script>
   </body>
 </html>
